--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Com o passar do tempo, a Internet deixou de ser apenas um recurso de troca de in
  </p>
 <img src=""
 
-<!-- alt=""> -->
+<!-- alt="" -->
 
 <!-- primeira fase -->
 <h2> <u> 1. A Internet pré-historica </u></h2>
